# ag_tech_challenge_rt

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Documentation.md  README.md  conanfile.py  install_conan.sh  run_conan.bat  run_conan.sh  run_conan_clang.sh  run_conan_clang_checkFormat.sh  run_conan_clang_wclang_tidy.sh  run_conan_gcc.sh  run_conan_win.sh
.github/workflows/: ci.yaml
app/src/: main.cpp
plugin/: CMakeLists.txt
plugin/include/plugin/: plugin.h
plugin/src/: plugin.cpp
plugin_segfault_detect/: CMakeLists.txt
plugin_segfault_detect/include/plugin/: plugin.h
plugin_segfault_detect/src/: plugin.cpp
profiles/: linux-clang  linux-gcc  windows-msvc
tests/: CMakeLists.txt  test_plugin.cpp  test_plugin_segfault_detect.cpp
